// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Topic tests on web should render HeadContainer correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ CHBUp"
/>
`;

exports[`Topic tests on web should render ResponsiveDivider correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ sAowN"
/>
`;

exports[`Topic tests on web should render ResponsiveName correctly 1`] = `
<div
  className="responsive-styles__component-fbPFZZ kfmhxW"
  dir="auto"
/>
`;

exports[`Topic tests on web should render correctly 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ CHBUp"
  >
    <div>
      <h1
        aria-label="topic-name"
        className="responsive-styles__component-fbPFZZ kfmhxW"
        data-testid="topic-name"
        dir="auto"
        role="heading"
      >
        Animals
      </h1>
    </div>
  </div>
</div>
`;

exports[`Topic tests on web should render correctly when loading 1`] = `<div />`;

exports[`Topic tests on web should render correctly with a description 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ CHBUp"
  >
    <div>
      <h1
        aria-label="topic-name"
        className="responsive-styles__component-fbPFZZ kfmhxW"
        data-testid="topic-name"
        dir="auto"
        role="heading"
      >
        Animals
      </h1>
      <div
        className="responsive-styles__component-fbPFZZ sAowN"
      />
      <div
        data-testid="topic-description"
        dir="auto"
      >
        Animals are multicellular eukaryotic organisms.
      </div>
    </div>
  </div>
</div>
`;
